Changed to a MIT license

--- a/webroot/less/cakephp/styles.less
+++ b/webroot/less/cakephp/styles.less
@@ -1,3 +1,11 @@
+/**
+ * Bootstrap styles for cakephp baked views
+ *
+ * @author Òscar Casajuana <elboletaire@underave.net>
+ * @license MIT
+ * @copyright Òscar Casajuana 2013-2015
+ */
+
 @import 'bootstrap.less';
 
 // Set all tables as .table.table-striped
